# Brutally

./: .dockerignore  .env  .env.example  .gitignore  DATABASE_SETUP_COMPLETE.md  Dockerfile  INTEGRATION_TEST_RESULTS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.production-db.yml  pyproject.toml
.kiro/specs/video-processing-platform/: design.md  requirements.md  tasks.md
Blackbox/: Aligned Architecture - API Layer Structure  Aligned Architecture - Core Downloader Module  Enterprise Video Platform - Complete Folder Architecture  charge
docs/: FRONTEND_INTEGRATION.md  database_implementation.md  task_7_completion_summary.md
examples/: database_usage.py  processing_example.py
rust/src/downloader/: mod.rs  parallel_download.rs
scripts/: check_frontend_readiness.py  test_api_endpoints.py
src/: __init__.py  main.py
src/api/: __init__.py  docs.py
src/api/middleware/: logging.py
src/api/models/: __init__.py
src/api/routes/: downloads.py
src/api/websockets/: progress.py
src/celery_app/: __init__.py  app.py  config.py  tasks.py
src/cli/: __init__.py
src/cli/commands/: config.py  health.py  jobs.py  worker.py
src/config/: logging_config.py
src/core/: __init__.py  merger.py
src/database/: __init__.py  init_db.py  service.py
src/database/migrations/: alembic.ini  env.py
src/database/migrations/versions/: 001_initial_schema.py
src/database/models/: audit.py  video.py
src/database/repositories/: audit_repo.py  base_repo.py  storage_repo.py  video_repo.py
src/hardware/: amd.py  apple_silicon.py  gpu_detector.py  intel.py  nvidia.py
src/monitoring/: __init__.py  audit.py  health.py  metrics.py
src/services/: __init__.py
src/utils/: __init__.py  constants.py
src/workers/: __init__.py
src/workers/tasks/: __init__.py  download_tasks.py  merge_tasks.py  notification_tasks.py
tests/: test_api.py  test_database.py  test_hardware.py  test_monitoring.py  test_workers.py
tests/integration/: test_download_integration.py  test_processing_integration.py
tests/unit/: test_hardware_detection.py  test_storage_service.py
video-processing-platform/: .env.example  API_ENDPOINTS_DOCUMENTATION.md  FRONTEND_READY.md  LOVABLE_FRONTEND_PROMPT.md  Makefile  README.md  docker-compose.production-db.yml  docker-compose.yml  setup.py
video-processing-platform/api-server/: .env.example  package.json  server.js
video-processing-platform/api-server/config/: database.js
video-processing-platform/api-server/middleware/: auth.js  validation.js
video-processing-platform/api-server/routes/: auth.js  jobs.js  videos.js
video-processing-platform/database/: README.md  SETUP_COMMANDS.md  health-check-simple.ps1  health-check.ps1  health-check.sh  pgadmin-servers.json  postgresql.conf  redis.conf  sentinel.conf  setup-production-db.sh
video-processing-platform/database/backup-scripts/: backup.sh  restore.sh
video-processing-platform/database/init-scripts/: 01-create-extensions.sql  02-create-users.sql
video-processing-platform/database/monitoring/: queries.sql
video-processing-platform/examples/: download_example.py  storage_example.py
video-processing-platform/rust/: Cargo.toml
video-processing-platform/rust/src/: lib.rs
video-processing-platform/rust/src/downloader/: chunk_manager.rs  resumable.rs
video-processing-platform/src/api/: dependencies.py  main.py
video-processing-platform/src/api/middleware/: __init__.py  auth.py  monitoring.py  rate_limit.py
video-processing-platform/src/api/models/: auth.py  common.py  jobs.py  processing.py
video-processing-platform/src/api/routes/: __init__.py  auth.py  health.py  jobs.py  metrics.py  processing.py  storage.py
video-processing-platform/src/cli/: main.py
video-processing-platform/src/config/: __init__.py  settings.py
video-processing-platform/src/core/: compressor.py  downloader.py  optimizer.py  processor.py
video-processing-platform/src/database/: connection.py
video-processing-platform/src/hardware/: __init__.py  hardware_manager.py  system_monitor.py  test_detection.py
video-processing-platform/src/monitoring/: correlation.py
video-processing-platform/src/services/: processing_service.py  storage_service.py
video-processing-platform/src/utils/: exceptions.py
video-processing-platform/src/workers/: job_manager.py
video-processing-platform/tests/: test_api_endpoints.py  test_config.py  test_e2e_cli.py
video-processing-platform/tests/integration/: test_storage_integration.py
video-processing-platform/tests/unit/: test_download_service.py
(+13 files in other folders)
